KhanhTran_Lab3/KhanhTran_Lab3/hls/.autopilot/db/sobel.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:2258:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:2258:5: note: FIX-IT applied suggested code changes
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:2272:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:2272:5: note: FIX-IT applied suggested code changes
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:2286:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:2286:5: note: FIX-IT applied suggested code changes
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:4254:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:4254:7: note: FIX-IT applied suggested code changes
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:10284:9: error: Resource with core_name: RAM_2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=line0 core=RAM_2P_BRAM
        ^
C:\Users\ankha\Desktop\FPGA_Design\KhanhTran_Lab3\KhanhTran_Lab3\hls\.autopilot\db\sobel.pp.0.cpp:10285:9: error: Resource with core_name: RAM_2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=line1 core=RAM_2P_BRAM
        ^
